[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overdue"
version = "0.1.0"
description = "The public record of transit promises: logs real-time arrival predictions, infers what actually happened, and publishes the report card."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "skyjafar-ds", email = "jafar.sky@gmail.com" }]
dependencies = [
    "requests>=2.31",
    "gtfs-realtime-bindings>=1.0",
    "numpy>=1.24",
]

[project.scripts]
overdue = "overdue.cli:main"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.8"]

[tool.hatch.build.targets.wheel]
packages = ["src/overdue"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
